--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<link rel="stylesheet" type="text/css" href="CSS/tout.css">
 		<script src="index.js"></script>
-		<script src="localization.js"></script>
 
 		<title>
 			cdelaof26
@@ -13,13 +12,11 @@
 	</head>
 	<body class="text-primary-0 dark:text-primary-1 bg-body-0 dark:bg-body-1">
 		<script id="nav" src="components/nav.js"></script>
+
 		<script id="header" src="pages/header.js"></script>
 
-		<div id="about" class="flex h-dvh hidden">
-			<section>
-				About me
-			</section>
-		</div>
+		<script id="about" src="pages/about.js"></script>
+
 
 		<!--
 		<div id="error_popup" class="fixed bottom-4 m-4 md:m-0 md:right-4 bg-sidebar-0 dark:bg-sidebar-1 p-4 rounded-xl border border-dim-0 dark:border-dim-1 hidden">
@@ -41,5 +38,5 @@
 		-->
 	</body>
 
-	<!-- <script src="index.js"></script> -->
+	<script src="localization.js"></script>
 </html>
