--- a/index.html
+++ b/index.html
@@ -14,28 +14,8 @@
 		<script id="nav" src="components/nav.js"></script>
 
 		<script id="header" src="pages/header.js"></script>
-
 		<script id="about" src="pages/about.js"></script>
-
-
-		<!--
-		<div id="error_popup" class="fixed bottom-4 m-4 md:m-0 md:right-4 bg-sidebar-0 dark:bg-sidebar-1 p-4 rounded-xl border border-dim-0 dark:border-dim-1 hidden">
-			<div class="flex">
-				<p class="not-italic self-center pr-2">
-					Ocurrió un error al cargar la página, intenta nuevamente
-				</p>
-				<button class="pl-2 border-l border-[#eaecef] dark:border-[#4c525c]">
-					<i class="fa fa-close fa-2x" onclick={toggle_error_notification_visibility(true)}>
-					</i>
-				</button>
-			</div>
-			<div class="flex flex-col justify-center absolute -left-3 -top-3 w-8 h-8 rounded-full bg-sky-500">
-				<p id="error_count" class="text-white text-center">
-					0
-				</p>
-			</div>
-		</div>
-		-->
+		<script id="portfolio" src="pages/portfolio.js"></script>
 	</body>
 
 	<script src="localization.js"></script>
