UI improvement and CV section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 		<script id="header" src="pages/header.js"></script>
 		<script id="about" src="pages/about.js"></script>
+		<script id="cv" src="pages/cv.js"></script>
 		<script id="portfolio" src="pages/portfolio.js"></script>
 	</body>
 
